Fixed alignment of color indicator

--- a/src/styles.css
+++ b/src/styles.css
@@ -2073,6 +2073,7 @@ main.round {
     border-radius: 12px !important;
     color: rgba(0, 0, 0, 0) !important;
     opacity: .75 !important;
+    vertical-align: baseline !important;
 }
 
 .color-icon.random::before {
@@ -2082,6 +2083,7 @@ main.round {
     border-bottom-right-radius: 0 !important;
     width: 6px !important;
     transform: translateY(-2px) !important;
+    vertical-align: middle !important;
 }
 
 .color-icon.random::after {
@@ -2091,6 +2093,7 @@ main.round {
     border-bottom-left-radius: 0 !important;
     width: 6px !important;
     transform: translateY(1px) !important;
+    vertical-align: baseline !important;
 }
 
 .color-icon.black::before {
